--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,141 @@
-*.class
+{
+    
+    "nodatafound": "No previous data found.",
+    "retrievingdata": "Retrieving previously stored data.",
+    "datarestored": "Previously stored data successfully retrieved.",
+    "greyuser": "Only bouncers and up can run a bot.",
+    "bouncer": "The bot can't move people when it's run as a bouncer.",
+    "online": "CZECH BOT%% online!",
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
 
-# Package Files #
-*.jar
-*.war
-*.ear
+    "welcome": "Vítej @%%NAME%% !",
+    "welcomeback": "Welcome back, @%%NAME%%",
+    "songknown": "/me @%%NAME%%, this song is in the DJ history.",
+    "timelimit": "@%%NAME%%, your song is longer than %%MAXLENGTH%% minutes, you need permission to play longer songs.",
+    "permissionownsong": ":up: @%%NAME%% has permission to play their own production!",
+    "isblacklisted": "This track is on the %%BLACKLIST%% blacklist! Lockskipping..",
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+
+    "isopen": "The roulette is now open! Type !join to participate!",
+    "winnerpicked": "A winner has been picked! @%%NAME%% to position %%POSITION%%.",
+
+
+    "alreadyadding": "User is already being added! Changed the desired position to %%POSITION%%.",
+    "adding": "Added @%%NAME%% to the queue. Current queue: %%POSITION%%.",
+
+
+    "usernotfound": "User not found.",
+    "notdisconnected": "[@%%NAME%%] [!dc] did not disconnect during my time here.",
+    "noposition": "No last position known. The waitlist needs to update at least once to register a user's last position.",
+    "toolongago": "@%%NAME%%'s last disconnect (DC or leave) was too long ago: %%TIME%%.",
+    "valid": "[@%%NAME%%] [!dc] disconnected %%TIME%% ago and should be at position %%POSITION%%.",
+
+
+    "warning1": "@%%NAME%% , you have been afk for %%TIME%%, please respond within 2 minutes or you will be removed.",
+    "warning2": "@%%NAME%% (AFK warning!)",
+    "afkremove": "",
+
+
+    "caps": "@%%NAME%%, unglue your capslock button please.",
+    "askskip": "@%%NAME%%, don't ask for skips.",
+    "spam": "@%%NAME%%, please don't spam.",
+    "roomadvertising": "@%%NAME%%, don't post links to other rooms please.",
+    "adfly": "@%%NAME%%, please change your autowoot program.",
+
+
+    "invalidtime": "[@%%NAME%%] Invalid time specified.",
+    "nolistspecified": "[@%%NAME%%] No list specified.",
+    "invalidlistspecified": "[@%%NAME%%] Invalid list specified.",
+    "nouserspecified": "[@%%NAME%%] No user specified.",
+    "invaliduserspecified": "[@%%NAME%%] Invalid user specified.",
+    "novaliduserspecified": "[@%%NAME%%] No valid user specified.",
+    "nolimitspecified": "[@%%NAME%%] No limit specified.",
+    "invalidlimitspecified": "[@%%NAME%%] Invalid limit.",
+    "invalidpositionspecified": "[@%%NAME%%] Invalid position specified.",
+    "toggleon": "[@%%NAME%%] %%FUNCTION%% enabled.",
+    "toggleoff": "[@%%NAME%%] %%FUNCTION%% disabled.",
+    "cmddeletion": "command deletion",
+    "afkremoval": "AFK removal",
+    "afksremoved": "AFK's removed",
+    "afklimit": "AFK limit",
+    "autoskip": "autoskip",
+    "newblacklisted": "[@%%NAME%%] This track belongs on the %%BLACKLIST%% blacklist! [ %%AUTHOR%% - %%TITLE%% - %%MID%% ]",
+    "blinfo": "[@%%NAME%%] Blacklist Info - author: %%AUTHOR%%, title: %%TITLE%%, mid: %%SONGID%%",
+    "cycleguard": "cycleguard",
+    "voteskip": "voteskip",
+    "blacklist": "blacklist",
+    "timeguard": "timeguard",
+    "chatfilter": "chatfilter",
+    "historyskip": "historyskip",
+    "lockdown": "lockdown",
+    "lockguard": "lockguard",
+    "usercommands": "usercommands",
+    "motd": "MotD",
+    "welcomemsg": "welcome message",
+    "songstats": "song statistics",
+    "etarestriction": "eta restriction",
+    "activeusersintime": "[@%%NAME%%] There have been %%AMOUNT%% users chatting in the past %%TIME%% minutes.",
+    "maximumafktimeset": "[@%%NAME%%] Maximum afk duration set to %%TIME%% minutes.",
+    "afkstatusreset": "[@%%NAME%%] Reset the afk status of @%%USERNAME%%.",
+    "inactivefor": "[@%%NAME%%] @%%USERNAME%% has been inactive for %%TIME%%.",
+    "autowoot": "[@%%NAME%%] [!autowoot] Use TastyPlug to autowoot and have custom emotes, inline images and many more features! https://fungustime.pw/tastyplug/",
+    "brandambassador": "A Brand Ambassador is the voice of the plug.dj users. They promote events, engage the community and share the plug.dj message around the world. For more info: http://blog.plug.dj/brand-ambassadors/",
+    "bouncerplusrank": "[@%%NAME%%] You have to be manager or up to enable Bouncer+.",
+    "chatcleared": "[@%%NAME%%] Cleared the chat.",
+    "deletechat": "[@%%NAME%%] Cleared the chat of %%USERNAME%%.",
+    "commandslink": "%%BOTNAME%% commands: https://trapplug.eu/#commands",
+    "eatcookie": "eats a cookie.",
+    "nousercookie": "/em doesn't see %%NAME%% in room and eats a cookie himself.",
+    "selfcookie": "@%%NAME%%, you're a bit greedy, aren't you? Giving cookies to yourself, bah. Share some with other people!",
+    "cookie": "@%%NAMETO%%, @%%NAMEFROM%% %%COOKIE%%",
+    "cycleguardtime": "[@%%NAME%%] The cycleguard is set to %%TIME%% minute(s).",
+    "dclookuprank": "[@%%NAME%%] Only bouncers and above can do a lookup for others.",
+    "emojilist": "Emoji list: %%LINK%%",
+    "notinwaitlist": "@%%NAME%%, you are not on the waitlist.",
+    "eta": "[@%%NAME%%] [!eta] you will reach the booth in approximately %%TIME%%.",
+    "facebook": "Like us on facebook: %%LINK%%",
+    "starterhelp": "This image will get you started on plug: %%LINK%%",
+    "roulettejoin": "@%%NAME%% joined the roulette! (!leave if you regret it.)",
+    "jointime": "[@%%NAMEFROM%%] @%%USERNAME%% has been in the room for %%TIME%%.",
+    "kickrank": "[@%%NAME%%] you can't kick users with an equal or higher rank than you!",
+    "kick": "[@%%NAME%%], @%%USERNAME%% you are being kicked from the community for %%TIME%% minutes.",
+    "kill": "Shutting down.",
+    "rouletteleave": "@%%NAME%% left the roulette!",
+    "songlink": "[@%%NAME%%] Link to current song: %%LINK%%",
+    "usedlockskip": "[%%NAME%% used lockskip.]",
+    "lockskippos": "[@%%NAME%%] Lockskip will now move the dj to position %%POSITION%%.",
+    "lockguardtime": "[@%%NAME%%] The lockguard is set to %%TIME%% minute(s).",
+    "maxlengthtime": "[@%%NAME%%] The maximum song duration is set to %%TIME%% minutes.",
+    "motdset": "MotD set to:  %%MSG%%",
+    "motdintervalset": "MotD interval set to %%INTERVAL%%.",
+    "addbotwaitlist": "@%%NAME%%, don't try to add me to the waitlist, please.",
+    "move": "[%%NAME%% used move.]",
+    "mutednotime": "[@%%NAME%%] Muted @%%USERNAME%%.",
+    "mutedmaxtime": "[@%%NAME%%] You can only mute for maximum %%TIME%% minutes.",
+    "mutedtime": "[@%%NAME%%] [!mute] Muted @%%USERNAME%% for %%TIME%% minutes.",
+    "unmuted": "[@%%NAME%%] [!unmute] Unmuted @%%USERNAME%%.",
+    "muterank": "[@%%NAME%%] [!mute] You can't mute persons with an equal or higher rank than you.",
+    "oplist": "OP list: %%LINK%%",
+    "pong": "Pong!",
+    "reload": "Be right back.",
+    "removenotinwl": "[@%%NAME%%] Specified user @%%USERNAME%% is not in the waitlist.",
+    "roomrules": "Please find the room rules here: %%LINK%%",
+    "sessionstats": "[@%%NAME%%] Total woots: %%WOOTS%%, total mehs: %%MEHS%%, total grabs: %%GRABS%%.",
+    "skip": "[%%NAME%% used skip.]",
+    "madeby": "This bot was made by %%NAME%%.",
+    "activefor": "I have been active for %%TIME%%.",
+    "swapinvalid": "[@%%NAME%%] Invalid user specified. (No names with spaces!)",
+    "swapwlonly": "[@%%NAME%%] Please only swap users that are in the waitlist!",
+    "swapping": "Swapping %%NAME1%% with %%NAME2%%.",
+    "genres": "Please find the permissible room genres here: %%LINK%%",
+    "notbanned": "[@%%NAME%%] The user was not banned.",
+    "unmutedeveryone": "[@%%NAME%%] Unmuted everyone.",
+    "unmuteeveryonerank": "[@%%NAME%%] Only managers and up can unmute everyone at once.",
+    "notmuted": "[@%%NAME%%] that user wasn't muted.",
+    "unmuterank": "[@%%NAME%%] You can't unmute persons with an equal or higher rank than you.",
+    "commandscd": "[@%%NAME%%] The cooldown for commands by users is now set to %%TIME%% seconds.",
+    "voteratio": "[@%%NAME%%] @%%USERNAME%% ~ woots: ' + %%WOOT%% + ', mehs: %%MEHS%%, ratio (w/m): %%RATIO%%.",
+    "website": "Check out our community website! %%LINK%%",
+    "youtube": "[%%NAME%%] Subscribe to us on youtube: %%LINK%%"
+
+}
